--- a/index.html
+++ b/index.html
@@ -6,22 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
 
     <title>CountryConverter</title>
   </head>
   <body>
     <div class="vue-app container">
-      <button @click="getStarted">Where am i?</button>
-      <button @click="tryThis">RenderData</button>
+      <!-- <button @click="getStarted">Where am i?</button> -->
+      <button @click="tryThis" v-if="!show">Where am i?</button>
       <article v-if="show">
         <img v-bind:src="flag" alt="" />
 
         <h3 class="country-name">{{countryName}}</h3>
-        <h4 class="country-region">{{countryRegion}}</h4>
-        <h5 class="country-subregion">{{countrySubregion}}</h5>
 
-        <p class="country-lang">{{countryLanguage}}</p>
-        <p class="country-cur">{{countryCurrency}}</p>
+        <p class="country-lang">Region:<span>{{countryRegion}}</span></p>
+        <p class="country-lang">Subregion:<span>{{countrySubregion}}</span></p>
+        <p class="country-lang">Language:<span>{{countryLanguage}}</span></p>
+        <p class="country-cur">Currency:<span>{{countryCurrency}}</span></p>
+        <p class="country-cur">Population:<span>{{countryPopulation}}</span></p>
       </article>
     </div>
     <script src="./app.js"></script>
